@@ -1,3 +1,8 @@
+2013-01-14  Julien Danjou  <julien@danjou.info>
+
+	* gnus-sum.el (gnus-summary-from-or-to-or-newsgroups): Compare
+	addresses against addresses, not against the full From field.
+
 2013-01-13  Richard Stallman  <rms@gnu.org>
 
 	* message.el (message-forward-make-body-mime): New args BEG, END
